@@ -103,6 +103,8 @@ int		camel_mime_part_construct_from_parser  (CamelMimePart *mime_part, CamelMime
 void      	camel_mime_part_set_content 	       (CamelMimePart *mime_part,
 							const char *content, int length, const char *type);
 
+size_t          camel_mime_part_get_content_size       (CamelMimePart *mime_part);
+
 G_END_DECLS
 
 #endif /* CAMEL_MIME_PART_H */
