@@ -303,6 +303,7 @@ camel_url_new (const char *url_string, CamelException *ex)
 	CamelURL *url;
 
 	g_return_val_if_fail (url_string != NULL, NULL);
+	g_return_val_if_fail (*url_string != 0, NULL);
 
 	url = camel_url_new_with_base (NULL, url_string);
 
