@@ -1,3 +1,7 @@
+2008-01-12  Philip Van Hoof <pvanhoof@gnome.org>
+
+	* Merged camel-lite with Camel upstream rev. 835
+
 2008-01-11  Philip Van Hoof <pvanhoof@gnome.org>
 
 	* Preparations for the new summary store
